app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app
spec:
  ports:
    - name: http
      port: 8050
      targetPort: http
  selector:
    app: app
    version: v2.0.11
  type: ClusterIP
